public/stylesheets/main.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700);
@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);

body {
  font-family: 'Roboto', sans-serif;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Roboto Condensed', sans-serif;
  color: black;
}
p {
  font-family: 'Roboto', sans-serif;
  line-height: 22px;
  font-size: 16px;
  font-weight: 300;
}
ul {
  padding-left: 0;
}
ul li {
  list-style: none;
}
h2 {
  font-size: 26px;
}
a:hover {
  text-decoration: none;
}
#top-bar {
  background: #fff;
  color: #fff;
  -webkit-transition: all 0.2s ease-out 0s;
  transition: all 0.2s ease-out 0s;
  padding: 15px 0;
  -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid #dedede;
}
#top-bar .navbar-nav > li > a:hover {
  background: transparent;
}
#top-bar.animated-header {
  padding: 10px 0;
  background: #ffffff;
  box-shadow: none;
}
#top-bar .main-menu li > a {
  color: #444;
}
#top-bar .main-menu li {
  position: relative;
}
#top-bar .main-menu li a {
  font-size: 14px;
  font-weight: 500;
  border-bottom: 2px solid transparent;
  -webkit-transition: .3s all;
  -o-transition: .3s all;
  transition: .3s all;
  text-transform: uppercase;
}
#top-bar .main-menu li a:hover {
  color: #ff3744;
}
#login-modal .modal-dialog {
    width: 350px;
}
#login-modal .login-btn{
  background-color: #ff3744;
  border-color: #ff3744;

}
#login-modal .login-btn:hover{
  background-color: #ff2634;
  border-color: #ff2634;
}
#login-modal input[type=text], input[type=password] {
  margin-top: 10px;
}

#login_lost_btn,
#login_register_btn,
#register_login_btn,
#register_lost_btn,
#lost_login_btn,
#lost_register_btn{
  color: #ff3744;
}

#login_lost_btn:hover,
#login_register_btn:hover{
  color: #ff2634;
}
#div-login-msg,
#div-lost-msg,
#div-register-msg {
    border: 1px solid #dadfe1;
    height: 30px;
    line-height: 28px;
    transition: all ease-in-out 500ms;
}

#div-login-msg.success,
#div-lost-msg.success,
#div-register-msg.success {
    border: 1px solid #68c3a3;
    background-color: #c8f7c5;
}

#div-login-msg.error,
#div-lost-msg.error,
#div-register-msg.error {
    border: 1px solid #eb575b;
    background-color: #ffcad1;
}

#icon-login-msg,
#icon-lost-msg,
#icon-register-msg {
    width: 30px;
    float: left;
    line-height: 28px;
    text-align: center;
    background-color: #dadfe1;
    margin-right: 5px;
    transition: all ease-in-out 500ms;
}

#icon-login-msg.success,
#icon-lost-msg.success,
#icon-register-msg.success {
    background-color: #68c3a3 !important;
}

#icon-login-msg.error,
#icon-lost-msg.error,
#icon-register-msg.error {
    background-color: #eb575b !important;
}

#new-bnb-modal .modal-dialog {
    width: 550px;
}
#new-bnb-modal .add-btn{
  background-color: #ff3744;
  border-color: #ff3744;

}
#new-bnb-modal .add-btn:hover{
  background-color: #ff2634;
  border-color: #ff2634;
}
#new-bnb-modal input[type=text], input[type=number], textarea ,
input[type=email]{
  margin-top: 10px;
}
#div-bnb-msg {
    border: 1px solid #dadfe1;
    height: 30px;
    line-height: 28px;
    transition: all ease-in-out 500ms;
}

#new-promotions-modal .modal-dialog {
    width: 550px;
}
#new-promotions-modal .add-btn{
  background-color: #ff3744;
  border-color: #ff3744;

}
#new-promotions-modal .add-btn:hover{
  background-color: #ff2634;
  border-color: #ff2634;
}
#new-promotions-modal input[type=text], input[type=number], textarea ,
input[type=email]{
  margin-top: 10px;
}
#div-market-msg {
    border: 1px solid #dadfe1;
    height: 30px;
    line-height: 28px;
    transition: all ease-in-out 500ms;
}

#new-market-modal .modal-dialog {
    width: 550px;
}
#new-market-modal .add-btn{
  background-color: #ff3744;
  border-color: #ff3744;

}
#new-market-modal .add-btn:hover{
  background-color: #ff2634;
  border-color: #ff2634;
}
#new-market-modal input[type=text], input[type=number], textarea ,
input[type=email]{
  margin-top: 10px;
}
#div-market-msg {
    border: 1px solid #dadfe1;
    height: 30px;
    line-height: 28px;
    transition: all ease-in-out 500ms;
}

.btn-file {
    margin-top: 10px;
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

#img_logo {
    max-height: 100px;
    max-width: 100px;
}
#slider-section {
  background: url('../images/back.jpg') no-repeat 50%;
  background-size: cover;
  background-attachment: fixed;
  padding: 15% 0;
  color: #fff;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
  position: relative;
  height: 10%;
}
#slider-section:before {
  content: '';
  z-index: 9;
  background: rgba(175, 175, 175, 0.75);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
#slider-section .block {
  position: relative;
  z-index: 999;
}
#slider-section h1 {
  font-size: 40px;
  color: #333;
  font-weight: 700;
  margin-bottom: 15px;
  text-transform: uppercase;
}
#slider-section h3 {
  font-size: 18px;
  font-weight: 300;
  margin-bottom: 38px;
  line-height: 27px;
  color: #333;
  font-family: 'Roboto-Condensed', sans-serif;
  margin-top: 25px;
}
#slider-section b {

	color: #ff3744;
}
#main-section h1{
  font-size: 40px;
  color: #333;
  font-weight: 700;
  margin-bottom: 15px;
  text-transform: uppercase;
}
.service-img{
  display: inline!important;
}
.service {
  margin: 30px 50px 0px 50px;
  text-align: center;
  display: inline-block;
  float: none;
}
#main-section h3 {
  font-size: 22px;
  font-weight: 300;
  margin-bottom: 38px;
  line-height: 27px;
  color: #333;
  font-family: 'Roboto-Condensed', sans-serif;
  margin-top: 25px;
}
.row-centered {
    text-align:center;
}
/* ... */

